--- a/index.html
+++ b/index.html
@@ -6,6 +6,130 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sunnyside</title>
     <link rel="stylesheet" href="./src/css/style.min.css" />
+    <script
+      src="https://kit.fontawesome.com/4ec5d12ad6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <img src="./images/sunnyside.png" alt="logo" />
+        <ul>
+          <li><a href="exemple.com">About</a></li>
+          <li><a href="exemple.com">Services</a></li>
+          <li><a href="exemple.com">Projects</a></li>
+          <li class="menu_contact"><a href="exemple.com">contact</a></li>
+        </ul>
+      </nav>
+      <h1>We are creatives</h1>
+      <img src="./images/Path 7.png" alt="arrow" />
+      <img src="./images/Path 8.png" alt="arrow_head" />
+    </header>
+    <main>
+      <section class="solutions">
+        <article class="eggs">
+          <section class="text">
+            <h2>Transform your brand</h2>
+            <p>
+              We are a full-service creative agency specializing in helping
+              brands grow fast. Engage your clients through compelling visuals
+              that do most of the marketing for you.
+            </p>
+            <a href="exemple.com">Learn more</a>
+          </section>
+          <img src="./images/mae-mu-40NjbC-Q-cw-unsplash.png" alt="egg" />
+        </article>
+        <article class="glass">
+          <img src="./images/mae-mu-GnWKTJlMYsQ-unsplash.png" alt="glass" />
+          <section class="text">
+            <h2>Stand out to the right audience</h2>
+            <p>
+              Using a collaborative formula of designers, researchers,
+              photographers, videographers, and copywriters, we'll build and
+              extend your brand digital places.
+            </p>
+            <a href="exemple.com">Learn more</a>
+          </section>
+        </article>
+        <article class="fruit_cherry">
+          <h2>Graphic Design</h2>
+          <p>
+            Great design makes you memorable. We deliver artwork that
+            underscores your brand message and captures potential clients'
+            attention.
+          </p>
+        </article>
+        <article class="fruit_tangerine">
+          <h2>photography</h2>
+          <p>
+            Increase your credibility by getting the most stunning, high-quality
+            photos that improve your business image.
+          </p>
+        </article>
+      </section>
+      <section class="testimony">
+        <h2>Client testimonials</h2>
+        <article class="emily">
+          <img src="./images/Oval.png" alt="photo Emily" />
+          <p>
+            We put our trust in Sunnyside and they delivered, making sure our
+            needs were met and deadlines were always hit.
+          </p>
+          <p>Emily R.</p>
+          <p>Marketing Director</p>
+        </article>
+        <article class="thomas">
+          <img src="./images/Oval Copy.png" alt="photo Thomas" />
+          <p>
+            Sunnyside’s enthusiasm coupled with their keen interest in our
+            brand’s success made it a satisfying and enjoyable experience.
+          </p>
+          <p>Thomas S.</p>
+          <p>Chief Operating Officer</p>
+        </article>
+        <article class="jennie">
+          <img src="./images/Oval Copy 2.png" alt="photo Jennie" />
+          <p>
+            Incredible end result! Our sales increased over 400% when we worked
+            with Sunnyside. Highly recommended!
+          </p>
+          <p>Jennie F.</p>
+          <p>Business Owner</p>
+        </article>
+      </section>
+      <section class="banner">
+        <img src="./images/Bitmap.png" alt="milk" />
+        <img src="./images/Bitmap(1).png" alt="orange" />
+        <img src="./images/Bitmap(2).png" alt="icecream" />
+        <img src="./images/Bitmap(3).png" alt="sugar" />
+      </section>
+    </main>
+    <footer>
+      <img src="./images/sunnyside(1).png" alt="logo" />
+      <section class="footer_menu">
+        <ul>
+          <li><a href="exemple.com">About</a></li>
+          <li><a href="exemple.com">Services</a></li>
+          <li><a href="exemple.com">Projects</a></li>
+        </ul>
+      </section>
+      <section class="menu_socialMedia">
+        <ul>
+          <li>
+            <a href="exemple.com"><i class="fa-brands fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href="exemple.com"><i class="fa-brands fa-instagram"></i></a>
+          </li>
+          <li>
+            <a href="exemple.com"><i class="fa-brands fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="exemple.com"><i class="fa-brands fa-pinterest"></i></a>
+          </li>
+        </ul>
+      </section>
+    </footer>
+  </body>
 </html>
