--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,500;0,9..144,600;0,9..144,700;0,9..144,800;0,9..144,900;1,9..144,500;1,9..144,600;1,9..144,700;1,9..144,800;1,9..144,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Sunnyside</title>
     <link rel="stylesheet" href="./src/css/style.min.css" />
     <script
@@ -19,7 +29,7 @@
           <li><a href="exemple.com">About</a></li>
           <li><a href="exemple.com">Services</a></li>
           <li><a href="exemple.com">Projects</a></li>
-          <li class="menu_contact"><a href="exemple.com">contact</a></li>
+          <li class="menu-contact"><a href="exemple.com">Contact</a></li>
         </ul>
       </nav>
       <h1>We are creatives</h1>
