--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         </ul>
       </nav>
       <h1>We are creatives</h1>
-      <img src="./images/Path 7.png" alt="arrow" />
-      <img src="./images/Path 8.png" alt="arrow_head" />
+      <img src="./images/icon-arrow-down.svg" alt="arrow" class="arrow" />
     </header>
     <main>
       <section class="solutions">
