--- a/index.html
+++ b/index.html
@@ -36,31 +36,31 @@
       <img src="./images/icon-arrow-down.svg" alt="arrow" class="arrow" />
     </header>
     <main>
-      <section class="solutions">
-        <article class="eggs">
-          <section class="text">
-            <h2>Transform your brand</h2>
-            <p>
-              We are a full-service creative agency specializing in helping
-              brands grow fast. Engage your clients through compelling visuals
-              that do most of the marketing for you.
-            </p>
-            <a href="exemple.com">Learn more</a>
-          </section>
-          <img src="./images/mae-mu-40NjbC-Q-cw-unsplash.png" alt="egg" />
+      <section class="solution">
+        <article class="text">
+          <h2 class="eggs">Transform your brand</h2>
+          <p>
+            We are a full-service creative agency specializing in helping brands
+            grow fast. Engage your clients through compelling visuals that do
+            most of the marketing for you.
+          </p>
+          <a class="link_yellow" href="exemple.com">Learn more</a>
         </article>
-        <article class="glass">
-          <img src="./images/mae-mu-GnWKTJlMYsQ-unsplash.png" alt="glass" />
-          <section class="text">
-            <h2>Stand out to the right audience</h2>
-            <p>
-              Using a collaborative formula of designers, researchers,
-              photographers, videographers, and copywriters, we'll build and
-              extend your brand digital places.
-            </p>
-            <a href="exemple.com">Learn more</a>
-          </section>
+        <div class="image_eggs"></div>
+
+        <div class="image_glass"></div>
+        <article class="text">
+          <h2 class="glass">Stand out to the right audience</h2>
+          <p>
+            Using a collaborative formula of designers, researchers,
+            photographers, videographers, and copywriters, we'll build and
+            extend your brand digital places.
+          </p>
+          <a class="link_pink" href="exemple.com">Learn more</a>
         </article>
+      </section>
+
+      <section class="design">
         <article class="fruit_cherry">
           <h2>Graphic Design</h2>
           <p>
@@ -69,14 +69,16 @@
             attention.
           </p>
         </article>
+
         <article class="fruit_tangerine">
-          <h2>photography</h2>
+          <h2>Photography</h2>
           <p>
             Increase your credibility by getting the most stunning, high-quality
             photos that improve your business image.
           </p>
         </article>
       </section>
+
       <section class="testimony">
         <h2>Client testimonials</h2>
         <article class="emily">
