--- a/index.html
+++ b/index.html
@@ -81,33 +81,35 @@
 
       <section class="testimony">
         <h2>Client testimonials</h2>
-        <article class="emily">
-          <img src="./images/Oval.png" alt="photo Emily" />
-          <p>
-            We put our trust in Sunnyside and they delivered, making sure our
-            needs were met and deadlines were always hit.
-          </p>
-          <p>Emily R.</p>
-          <p>Marketing Director</p>
-        </article>
-        <article class="thomas">
-          <img src="./images/Oval Copy.png" alt="photo Thomas" />
-          <p>
-            Sunnyside’s enthusiasm coupled with their keen interest in our
-            brand’s success made it a satisfying and enjoyable experience.
-          </p>
-          <p>Thomas S.</p>
-          <p>Chief Operating Officer</p>
-        </article>
-        <article class="jennie">
-          <img src="./images/Oval Copy 2.png" alt="photo Jennie" />
-          <p>
-            Incredible end result! Our sales increased over 400% when we worked
-            with Sunnyside. Highly recommended!
-          </p>
-          <p>Jennie F.</p>
-          <p>Business Owner</p>
-        </article>
+        <ul>
+          <li class="emily">
+            <img src="./images/Oval.png" alt="photo Emily" />
+            <p class="story">
+              We put our trust in Sunnyside and they delivered, making sure our
+              needs were met and deadlines were always hit.
+            </p>
+            <p class="name">Emily R.</p>
+            <p class="title">Marketing Director</p>
+          </li>
+          <li article class="thomas">
+            <img src="./images/Oval Copy.png" alt="photo Thomas" />
+            <p class="story">
+              Sunnyside’s enthusiasm coupled with their keen interest in our
+              brand’s success made it a satisfying and enjoyable experience.
+            </p>
+            <p class="name">Thomas S.</p>
+            <p class="title">Chief Operating Officer</p>
+          </li>
+          <li class="jennie">
+            <img src="./images/Oval Copy 2.png" alt="photo Jennie" />
+            <p class="story">
+              Incredible end result! Our sales increased over 400% when we
+              worked with Sunnyside. Highly recommended!
+            </p>
+            <p class="name">Jennie F.</p>
+            <p class="title">Business Owner</p>
+          </li>
+        </ul>
       </section>
       <section class="banner">
         <img src="./images/Bitmap.png" alt="milk" />
