--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
             grow fast. Engage your clients through compelling visuals that do
             most of the marketing for you.
           </p>
-          <a class="link_yellow" href="exemple.com">Learn more</a>
+          <a href="exemple.com"
+            >Learn more
+            <span class="link_yellow"></span>
+          </a>
         </article>
         <div class="image_eggs"></div>
 
@@ -56,7 +59,10 @@
             photographers, videographers, and copywriters, we'll build and
             extend your brand digital places.
           </p>
-          <a class="link_pink" href="exemple.com">Learn more</a>
+          <a href="exemple.com"
+            >Learn more
+            <span class="link_pink"></span>
+          </a>
         </article>
       </section>
 
