--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
           <li article class="thomas">
             <img src="./images/Oval Copy.png" alt="photo Thomas" />
             <p class="story">
-              Sunnyside’s enthusiasm coupled with their keen interest in our
-              brand’s success made it a satisfying and enjoyable experience.
+              Sunnyside's enthusiasm coupled with their keen interest in our
+              brand's success made it a satisfying and enjoyable experience.
             </p>
             <p class="name">Thomas S.</p>
             <p class="title">Chief Operating Officer</p>
