--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <header>
       <nav>
         <img src="./images/sunnyside.png" alt="logo" />
+        <div class="menu_burger">
+          <i class="fa-solid fa-bars"></i>
+        </div>
         <ul>
           <li><a href="exemple.com">About</a></li>
           <li><a href="exemple.com">Services</a></li>
