--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <main>
       <section class="solution">
-        <article class="text">
+        <article class="text text_eggs">
           <h2 class="eggs">Transform your brand</h2>
           <p>
             We are a full-service creative agency specializing in helping brands
@@ -55,7 +55,7 @@
         <div class="image_eggs"></div>
 
         <div class="image_glass"></div>
-        <article class="text">
+        <article class="text text_glass">
           <h2 class="glass">Stand out to the right audience</h2>
           <p>
             Using a collaborative formula of designers, researchers,
@@ -121,10 +121,15 @@
         </ul>
       </section>
       <section class="banner">
-        <img src="./images/Bitmap.png" alt="milk" />
+        <div class="milk"></div>
+        <div class="orange"></div>
+        <div class="icecream"></div>
+        <div class="sugar"></div>
+
+        <!-- <img src="./images/Bitmap.png" alt="milk" />
         <img src="./images/Bitmap(1).png" alt="orange" />
         <img src="./images/Bitmap(2).png" alt="icecream" />
-        <img src="./images/Bitmap(3).png" alt="sugar" />
+        <img src="./images/Bitmap(3).png" alt="sugar" /> -->
       </section>
     </main>
     <footer>
