--- a/index.html
+++ b/index.html
@@ -23,11 +23,21 @@
   </head>
   <body>
     <header>
+      <div class="menu-burger-nav">
+        <ul>
+          <li><a href="exemple.com">About</a></li>
+          <li><a href="exemple.com">Services</a></li>
+          <li><a href="exemple.com">Projects</a></li>
+          <li class="menu-contact-burger"><a href="exemple.com">Contact</a></li>
+        </ul>
+      </div>
+
       <nav>
         <img src="./images/sunnyside.png" alt="logo" />
-        <div class="menu_burger">
+        <div class="menu-burger">
           <i class="fa-solid fa-bars"></i>
         </div>
+
         <ul>
           <li><a href="exemple.com">About</a></li>
           <li><a href="exemple.com">Services</a></li>
@@ -125,11 +135,6 @@
         <div class="orange"></div>
         <div class="icecream"></div>
         <div class="sugar"></div>
-
-        <!-- <img src="./images/Bitmap.png" alt="milk" />
-        <img src="./images/Bitmap(1).png" alt="orange" />
-        <img src="./images/Bitmap(2).png" alt="icecream" />
-        <img src="./images/Bitmap(3).png" alt="sugar" /> -->
       </section>
     </main>
     <footer>
@@ -158,5 +163,6 @@
         </ul>
       </section>
     </footer>
+    <script src="./index.js"></script>
   </body>
 </html>
