--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
             <p class="name">Emily R.</p>
             <p class="title">Marketing Director</p>
           </li>
-          <li article class="thomas">
-            <img src="./images/Oval Copy.png" alt="photo Thomas" />
+          <li class="thomas">
+            <img src="./images/OvalCopy.png" alt="photo Thomas" />
             <p class="story">
               Sunnyside's enthusiasm coupled with their keen interest in our
               brand's success made it a satisfying and enjoyable experience.
@@ -120,7 +120,7 @@
             <p class="title">Chief Operating Officer</p>
           </li>
           <li class="jennie">
-            <img src="./images/Oval Copy 2.png" alt="photo Jennie" />
+            <img src="./images/OvalCopy2.png" alt="photo Jennie" />
             <p class="story">
               Incredible end result! Our sales increased over 400% when we
               worked with Sunnyside. Highly recommended!
