--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@
       <section class="menu_socialMedia">
         <ul>
           <li>
-            <a href="exemple.com"><i class="fa-brands fa-facebook"></i></a>
+            <a href="exemple.com"
+              ><i class="fa-brands fa-facebook-square"></i
+            ></a>
           </li>
           <li>
             <a href="exemple.com"><i class="fa-brands fa-instagram"></i></a>
